syntax = "proto3";

package third_party.cel.spec.tools.tests;

import "google/api/expr/v1alpha1/value.proto";

message TestValue {
  string name = 1;

  google.api.expr.v1alpha1.Value value = 2;
}
